# sparse_auto_encoders

./: .gitignore  .gitmodules  SAE_training.py  convert_to_safetensors.py  environment.yml  notes.md  pyproject.toml  setup.py  setup.sh  setup_remote_machine.sh  todo.md  training_a_sparse_autoencoder.ipynb
src/: SAE_training.py  dataset.py  eval.py  models.py  training.py
