[project]
name = "sparse-auto-encoders"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.11.0",
    "circuitsvis>=1.43.3",
    "datasets>=4.4.1",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "sae-lens>=6.22.0",
    "safetensors>=0.6.2",
    "torch>=2.9.0",
    "transformer-lens>=2.16.1",
    "transformers>=4.57.1",
    "wandb>=0.22.3",
]
