[project]
name = "sparse-auto-encoders"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.11.0",
    "circuitsvis>=1.43.3",
    #"datasets>=4.4.1",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "sae-lens>=6.22.0",
    "safetensors>=0.6.2",
    "torch>=2.9.0",
    "transformer-lens>=2.16.1",
    "transformers>=4.57.1",
    #"transformer-lens>=2.0.0",
    "wandb>=0.22.3",
    "einops>=0.8.0",
    "jaxtyping>=0.2.25",
    "beartype>=0.14.1",
    "scikit-learn>=1.5.2",
    "sae_lens==6.22.1",
    "collectibles>=0.1.5",
    "pydantic>=2.9.2",
    "seaborn>=0.13.2",
    "plotly>=5.22.0",
    "matplotlib>=3.8.4",
    "tabulate>=0.9.0",
    "openai>=1.0.0",
    "datasets==3.6.0" # skylion openwebtext fails to load with datasets 4.0.0 currently, pending https://huggingface.co/datasets/Skylion007/openwebtext/discussions/22
]